--- a/L5.md
+++ b/L5.md
@@ -8,4 +8,6 @@
 ## Se varió en el código el parámetro nu o parámetro de servicio, (20/9)/60.
 ## Cambio de "frecuencias" por "ocurrencias"
 
-## La asignación mencionaba que la administración del servicio desea un servidor no vacío por más del 10% del tiempo, pero análizando un poco se puede entender cel 10 no vacío como el 90% o más atendiendo, por lo que finalmente en el código se cambia la condición de que "fraccion <= 0.01" por "fraccion >= 0.9". 
+## La asignación mencionaba que la administración del servicio desea un servidor no vacío por más del 10% del tiempo, pero análizando un poco se puede entender el 10 no vacío como el 90% o más atendiendo, por lo que en el código se cambia la condición de que "fraccion <= 0.01" por "fraccion >= 0.9". 
+
+## Finalmente se cumplirá con las específicaciones cuando el tiempo con solicitudes en fila sea mayor o igual al 90%.
